    settings wouldn't take effect until the ROM was reloaded.

  * Fixed bugs with cheatcode handling; loading a ROM with a cheat
    disabled would sometimes trash the emulation.  More work is
    required in this area, including the ability to create more
    advanced types of cheats.

  * Updated ROM properties database for all Sega Genesis controller
    compatible ROMs.

  * Fixed compile issues in Irix when using the default compiler
    instead of gcc.  Thanks go to Rainer M. Canavan for this code.

-Have fun!


3.4.1 to 3.5: (December 29, 2011)

  * Stella is now DonationWare!  Please see the DonationWare link on the
    main webpage for more information.

  * Added several improvements to the joystick management code.  Joystick
    event mapping is now saved per device, meaning that if you map events
    to a certain joystick device, remove the device and then later insert
    it again, Stella will remember the original mapping.

  * The total number of joysticks present and their associated properties
    (number of axes, buttons and hats) is now dynamic.  That is, there's
    no longer a hard-coded limit on the number of joysticks that Stella
    can use, or the number of buttons, etc that it contains.  This fixes
    a serious bug with PS3 controllers with 27 buttons, whereby adding a
    mapping for joystick 0 would inadvertantly change settings for
    joystick 1, and could potentially lead to a program crash.

  * Added 'mcontrol' commandline argument, which can specify to use each
    mouse axis as a separate paddle.  The old (and default) behaviour can
    be activated by setting this argument to 'auto'.  Related to this,
    removed redundant 'usemouse' argument.

  * Huge restructuring of the OpenGL code, making it compatible with 
    OpenGL 2.x+ features (such as vertex buffer objects), while at the
    same time keeping compatibility with OpenGL 1.5 / OpenGL ES.
    Because of the required changes, TV effects were removed (they will